discussion/kv_engine/126496/126496_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-30044: Modernize using clang-tidy google-explicit-constructor

This adds the explicit keyword to simple cases that do not require
further changes to use an explicit constructor.

Change-Id: I08c088767152793e99c3d8e5a368a0adb1dfcbb3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2020-06-26 14:35:27.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-26 15:07:57.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24874/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24874/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4575/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12301/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12301/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4412/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4412/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1556/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/dcp/backfill-manager.h b/engines/ep/src/dcp/backfill-manager.h
index a826028..7e4bb4d 100644
--- a/engines/ep/src/dcp/backfill-manager.h
+++ b/engines/ep/src/dcp/backfill-manager.h
@@ -148,10 +148,10 @@ public:
      *        bytesSent()).
      */
     explicit BackfillManager(KVBucket&amp; kvBucket,
-                    BackfillTrackingIface&amp; backfillTracker,
-                    size_t scanByteLimit,
-                    size_t scanItemLimit,
-                    size_t backfillByteLimit);
+                             BackfillTrackingIface&amp; backfillTracker,
+                             size_t scanByteLimit,
+                             size_t scanItemLimit,
+                             size_t backfillByteLimit);
 
     /**
      * Construct a BackfillManager, using values for scanByteLimit,
@@ -159,8 +159,8 @@ public:
      * object.
      */
     explicit BackfillManager(KVBucket&amp; kvBucket,
-                    BackfillTrackingIface&amp; dcpConnmap,
-                    const Configuration&amp; config);
+                             BackfillTrackingIface&amp; dcpConnmap,
+                             const Configuration&amp; config);
 
     virtual ~BackfillManager();
 

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1556/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3050/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:20:2: error: "Include threadlocal.h instead" [clang-diagnostic-error]
#error "Include threadlocal.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:31: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    explicit ThreadLocalPosix(ThreadLocalDestructor dtor = nullptr)
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:53: error: cannot initialize a parameter of type "int" with an rvalue of type "nullptr_t" [clang-diagnostic-error]
    explicit ThreadLocalPosix(ThreadLocalDestructor dtor = nullptr)
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:53: note: passing argument to parameter "dtor" here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:88:5: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    ThreadLocalDestructor dtor;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/vb_commit.h:43:21: warning: pass by value and use std::move [modernize-pass-by-value]
                    const vbucket_state& vbs = {})
                    ^~~~~~~~~~~~~~~~~~~~
                    vbucket_state 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_conn_store.h:33:18: error: variable has incomplete type "Vbid" [clang-diagnostic-error]
            Vbid vbid, const ConnHandler& conn) {
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/conn_store.h:33:7: note: forward declaration of "Vbid"
class Vbid;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/xattr/blob.h:47:35: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    explicit Blob(std::unique_ptr<char[]>& allocator_, size_t size = 0)
                                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3050/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:20:2:
error: "Include threadlocal.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3050/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28859/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4478/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3518/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
